--- a/cfp/templates/cfp/_proposal_form.html
+++ b/cfp/templates/cfp/_proposal_form.html
@@ -21,6 +21,8 @@
     <div class="card-body">
       {% bootstrap_field form.description layout='horizontal' %}
       <hr>
+      {% bootstrap_field form.description_private layout='horizontal' %}
+      <hr>
       {% bootstrap_field form.outline layout='horizontal' %}
       <hr>
       <p>Is your session particularly suitable for:</p>
