Add URL for Financial Assistance page on main site

--- a/cfp/templates/cfp/_proposal_form.html
+++ b/cfp/templates/cfp/_proposal_form.html
@@ -58,11 +58,11 @@
       </p>
 
       <p>
-        <strong>Every speaker who needs a free ticket will receive one.</strong> However, you <em>must</em> request it through <a href="">our financial assistance programme</a>. Speakers who feel they can afford only a portion of the price of a ticket are welcome to select purchase theirs at the lower <em>Unwaged</em> rate if that is a suitable option for them.
+        <strong>Every speaker who needs a free ticket will receive one.</strong> However, you <em>must</em> request it through <a href="https://2018.pyconuk.org/financial-assistance">our financial assistance programme</a>. Speakers who feel they can afford only a portion of the price of a ticket are welcome to select purchase theirs at the lower <em>Unwaged</em> rate if that is a suitable option for them.
       </p>
 
       <p>
-        In addition, if you require assistance in the form of <strong>funds for travel, accommodation or other expenses</strong>, we warmly invite you to apply for those through <a href="">the financial assistance programme</a>. We will do all we can to make it possible for you to speak at our conference.
+        In addition, if you require assistance in the form of <strong>funds for travel, accommodation or other expenses</strong>, we warmly invite you to apply for those through <a href="https://2018.pyconuk.org/financial-assistance">the financial assistance programme</a>. We will do all we can to make it possible for you to speak at our conference.
       </p>
 
       <p>
