--- a/tickets/templates/tickets/_ticket_price_table.html
+++ b/tickets/templates/tickets/_ticket_price_table.html
@@ -1,4 +1,4 @@
-<table class="table table-condensed table-striped">
+<table class="table table-condensed table-striped" id="price-table">
   {% for row in rates_table_data %}
   <tr>
     {% for item in row %}
