--- a/tickets/templates/tickets/order_edit.html
+++ b/tickets/templates/tickets/order_edit.html
@@ -12,7 +12,9 @@
 </div>
 
 <div class="row">
-  {% include 'tickets/_order_form.html' %}
+  <div class="col">
+    {% include 'tickets/_order_form.html' %}
+  </div>
 </div>
 {% endblock %}
 
