--- a/tickets/templates/tickets/new_order.html
+++ b/tickets/templates/tickets/new_order.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col">
+  <div class="col-12 col-md-6">
     {% if not request.user.is_authenticated %}
     <p>Please <a href="{% url 'register' %}?next={{ request.path }}">sign up</a> or <a href="{% url 'login' %}?next={{ request.path }}">sign in</a> to buy a ticket.</p>
     {% endif %}
@@ -10,15 +10,17 @@
     {% include './_ticket_info.html' %}
   </div>
 
-  <div class="col">
+  <div class="col-12 col-md-6">
     {% include './_ticket_price_table.html' %}
   </div>
 </div>
 
 <div class="row">
-  {% if request.user.is_authenticated %}
-  {% include 'tickets/_order_form.html' %}
-  {% endif %}
+  <div class="col">
+    {% if request.user.is_authenticated %}
+      {% include 'tickets/_order_form.html' %}
+    {% endif %}
+  </div>
 </div>
 {% endblock %}
 
