Improve tickets page

--- a/ironcage/static/ironcage/ironcage.css
+++ b/ironcage/static/ironcage/ironcage.css
@@ -15,3 +15,11 @@ input[type='checkbox'] {
   position: relative;
   top: -2px;
 }
+
+#price-table tr:first-child td, #price-table tr td:first-child {
+    font-weight: bold;
+}
+
+#price-table tr td:first-child {
+    width: 25%;
+}
