--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -19,7 +19,7 @@
     <div class="masthead">
 
       <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="/"><span>PyCon UK</span></a>
+        <a class="navbar-brand" href="https://2018.pyconuk.org/"><span>PyCon UK</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>Menu
         </button>
