--- a/grants/templates/grants/_application_details.html
+++ b/grants/templates/grants/_application_details.html
@@ -1,4 +1,4 @@
-<div class="card bg-primary">
+<div class="card bg-primary text-dark">
     <div class="card-header"><h2>About You</h2></div>
     <div class="card-body">
         <h4>About you</h4>
@@ -18,7 +18,7 @@
 </div>
 
 {% if not application.requested_ticket_only %}
-    <div class="card bg-primary">
+    <div class="card bg-primary text-dark">
         <div class="card-header"><h2>Financial Assistance</h2></div>
         <div class="card-body">
             <p>You have requested a grant for {{ application.amount_requested }}.</p>
