--- a/grants/templates/grants/new_application.html
+++ b/grants/templates/grants/new_application.html
@@ -10,7 +10,7 @@
     <p>Applications for financial assistance will close at 1200 BST on June 15th.</p>
     <hr>
 
-    <div class="card bg-primary">
+    <div class="card bg-primary text-dark">
         <div class="card-header"><h2>About the programme</h2></div>
         <div class="card-body">
             <p class="card-text">
