--- a/grants/templates/grants/_application_form.html
+++ b/grants/templates/grants/_application_form.html
@@ -3,7 +3,7 @@
 <form method="post">
   {% csrf_token %}
 
-  <div class="card bg-primary">
+  <div class="card bg-primary text-dark">
     <div class="card-header"><h2>About You</h2></div>
     <div class="card-body">
       {% bootstrap_field form.about_you %}
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <div class="card bg-primary" id="further-assistance">
+  <div class="card bg-primary text-dark" id="further-assistance">
     <div class="card-header"><h2>Financial Assistance</h2></div>
     <div class="card-body">
       {% bootstrap_field form.amount_requested %}
