--- a/tickets/templates/tickets/_others_form.html
+++ b/tickets/templates/tickets/_others_form.html
@@ -1,14 +1,17 @@
 <div data-formset-form>
   <div class="row">
-    <div class="col-4">
+    <div class="col">
       {{ form.email_addr }}
     </div>
-    <div class="col-6">
+    <div class="col">
+      {{ form.name }}
+    </div>
+    <div class="col">
       <div class="btn-group btn-group-toggle{% if form.days.errors %} error{% endif %}" data-toggle="buttons">
         {{ form.days }}
       </div>
     </div>
-    <div class="col-1">
+    <div class="col">
       <button type="button" data-formset-delete-button class="btn btn-danger">&times;</button>
       <div class="invisible">{{ form.DELETE }}</div>
     </div>
