--- a/tickets/templates/tickets/_order_form.html
+++ b/tickets/templates/tickets/_order_form.html
@@ -60,7 +60,10 @@
         <div class="col-4">
           <label>Email address</label>
         </div>
-        <div class="col-8">
+        <div class="col-4">
+          <label>Name</label>
+        </div>
+        <div class="col-4">
           <label>Days</label>
         </div>
       </div>
