--- a/ironcage/static/ironcage/ironcage.css
+++ b/ironcage/static/ironcage/ironcage.css
@@ -15,3 +15,7 @@ input[type='checkbox'] {
   position: relative;
   top: -2px;
 }
+
+.btn-group-toggle.is-invalid~.invalid-feedback {
+    display: block;
+}
