Settle on “Proposal”, make forms wider, tidy up

--- a/grants/templates/grants/new_application.html
+++ b/grants/templates/grants/new_application.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-lg-8 offset-lg-2 col-sm-12">
+  <div class="col">
     <h1>Application for financial assistance</h1>
     <hr>
     <p>Applications for financial assistance will close at 1200 BST on June 15th.</p>
