--- a/cfp/templates/cfp/new_proposal.html
+++ b/cfp/templates/cfp/new_proposal.html
@@ -4,15 +4,15 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-lg-8 offset-lg-2 col-sm-12">
+  <div class="col">
     <h1>New proposal</h1>
-    <hr />
+    <hr>
     <p>PyCon UK is a community conference, and we're looking for proposals of all sorts for talks, workshops, posters — or anything else — from all parts of the community.</p>
 
-    <p><a href="https://2018.pyconuk.org/call-proposals/">Read more about our Call for Participation</a>.</p>
+    <p><a href="https://2018.pyconuk.org/call-proposals/">Read more about our Call for Proposals</a>.</p>
 
-    <p>The Call for Participation will close at 1200 BST on June 15th.</p>
-    <hr />
+    <p>The Call for Proposals will close at 1200 BST on June 15th.</p>
+    <hr>
     {% if not request.user.is_authenticated %}
         <p>Please <a href="{% url 'register' %}?next={{ request.path }}">sign up</a> or <a href="{% url 'login' %}?next={{ request.path }}">sign in</a> to make a submission.</p>
     {% else %}
