--- a/cfp/templates/cfp/proposal_edit.html
+++ b/cfp/templates/cfp/proposal_edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-lg-8 offset-lg-2 col-sm-12">
+  <div class="col">
     <h1>Update your proposal</h1>
     {% include './_proposal_form.html' %}
   </div>
