Tweaks to profile page and profile prompt

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-lg-8 offset-lg-2 col-sm-12">
+  <div class="col">
     <form method="post">
       {% csrf_token %}
 
