--- a/cfp/templates/cfp/proposal.html
+++ b/cfp/templates/cfp/proposal.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-lg-8 offset-lg-2 col-sm-12">
+  <div class="col">
     {% include './_proposal_details.html' %}
 
     {% if cfp_open %}
