--- a/grants/templates/grants/application.html
+++ b/grants/templates/grants/application.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-lg-8 offset-lg-2 col-sm-12">
+  <div class="col">
     <h1>Your application for financial assistance</h1>
     <hr>
 
