--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-lg-8 offset-lg-2 col-sm-12">
+  <div class="col">
     {% include './_profile_details.html' %}
 
     <a href="{% url 'accounts:edit_profile' %}" role="button" class="btn btn-primary">Update my profile</a>
