--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,5 +1,7 @@
 {% extends 'ironcage/base.html' %}
 
+{% load bootstrap4 %}
+
 {% block content %}
 
 {% if form.errors %}
@@ -15,24 +17,31 @@
 <form method="post" action="{% url 'login' %}">
   {% csrf_token %}
   <input type="hidden" name="next" value="{{ next }}" />
-
-  <div class="form-group row">
-    <label for="{{ form.username.auto_id }}" class="col-sm-2  col-form-label">{{ form.username.label }}</label>
-    <div class="col-sm-10">
-      {{ form.username }}
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <label for="{{ form.password.auto_id }}" class="col-sm-2  col-form-label">{{ form.password.label }}</label>
-    <div class="col-sm-10">
-      {{ form.password }}
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <div class="offset-sm-2 col-sm-10">
-      <button type="submit" class="btn btn-primary">Sign in</button>
+  <div class="card bg-danger text-dark">
+    <div class="card-header"><h2>Sign up</h2></div>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-4">
+          <label>{{ form.username.label }}</label>
+        </div>
+        <div class="col-8">
+          {% bootstrap_field form.username layout='inline' %}
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-4">
+          <label>{{ form.password.label }}</label>
+        </div>
+        <div class="col-8">
+          {% bootstrap_field form.password layout='inline' %}
+        </div>
+      </div>
+      <div class="form-group row">
+        <div class="col card-text">
+          <button type="submit" class="btn btn-primary">Sign in</button>
+        </div>
+      </div>
     </div>
   </div>
 </form>
