--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -26,24 +26,59 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="nav navbar-nav">
             <li class="nav-item child first">
-              <a href="https://2018.pyconuk.org/sponsorship/" class="nav-link">
-                Sponsorship
-              </a>
+                <a href="https://2018.pyconuk.org/tickets/" class="nav-link">
+                    Tickets
+                </a>
+
             </li>
+
             <li class="nav-item child">
-              <a href="https://2018.pyconuk.org/diversity-inclusion-accessibility/" class="nav-link">
-                Diversity, inclusion, accessibility
-              </a>
+                <a href="https://2018.pyconuk.org/call-proposals/" class="nav-link">
+                    Call for proposals
+                </a>
+
             </li>
+
             <li class="nav-item child">
-              <a href="https://2018.pyconuk.org/code-conduct/" class="nav-link">
-                Code of conduct
-              </a>
+                <a href="https://2018.pyconuk.org/sponsorship/" class="nav-link">
+                    Sponsorship
+                </a>
+
             </li>
+
+            <li class="nav-item child">
+                <a href="https://2018.pyconuk.org/travel-accommodation/" class="nav-link">
+                    Travel &amp; accommodation
+                </a>
+
+            </li>
+
+            <li class="nav-item child">
+                <a href="https://2018.pyconuk.org/diversity-inclusion-accessibility/" class="nav-link">
+                    Diversity, inclusion, accessibility
+                </a>
+
+            </li>
+
+            <li class="nav-item child">
+                <a href="https://2018.pyconuk.org/code-conduct/" class="nav-link">
+                    Code of conduct
+                </a>
+
+            </li>
+
+            <li class="nav-item child">
+                <a href="https://2018.pyconuk.org/contact/" class="nav-link">
+                    Contact
+                </a>
+
+            </li>
+
             <li class="nav-item child last">
-              <a href="https://2018.pyconuk.org/contact/" class="nav-link">
-                Contact
-              </a>
+                <a href="https://2018.pyconuk.org/financial-assistance/" class="nav-link">
+                    Financial Assistance
+                </a>
+
             </li>
           </ul>
         </div>
