--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -25,60 +25,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="nav navbar-nav">
-            <li class="nav-item child first">
-                <a href="https://2018.pyconuk.org/tickets/" class="nav-link">
-                    Tickets
+            <li class="nav-item child first active">
+                <a href="https://2018.hq.pyconuk.org/" class="nav-link">
+                    Registration Office
                 </a>
-
             </li>
-
-            <li class="nav-item child">
-                <a href="https://2018.pyconuk.org/call-proposals/" class="nav-link">
-                    Call for proposals
-                </a>
-
-            </li>
-
-            <li class="nav-item child">
-                <a href="https://2018.pyconuk.org/sponsorship/" class="nav-link">
-                    Sponsorship
-                </a>
-
-            </li>
-
-            <li class="nav-item child">
-                <a href="https://2018.pyconuk.org/travel-accommodation/" class="nav-link">
-                    Travel &amp; accommodation
-                </a>
-
-            </li>
-
-            <li class="nav-item child">
-                <a href="https://2018.pyconuk.org/diversity-inclusion-accessibility/" class="nav-link">
-                    Diversity, inclusion, accessibility
-                </a>
-
-            </li>
-
-            <li class="nav-item child">
-                <a href="https://2018.pyconuk.org/code-conduct/" class="nav-link">
-                    Code of conduct
-                </a>
-
-            </li>
-
-            <li class="nav-item child">
-                <a href="https://2018.pyconuk.org/contact/" class="nav-link">
-                    Contact
-                </a>
-
-            </li>
-
             <li class="nav-item child last">
-                <a href="https://2018.pyconuk.org/financial-assistance/" class="nav-link">
-                    Financial Assistance
+                <a href="https://2018.pyconuk.org/" class="nav-link">
+                    Back to main site
                 </a>
-
             </li>
           </ul>
         </div>
