Sign in not sign up

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -18,7 +18,7 @@
   {% csrf_token %}
   <input type="hidden" name="next" value="{{ next }}" />
   <div class="card bg-danger text-dark">
-    <div class="card-header"><h2>Sign up</h2></div>
+    <div class="card-header"><h2>Sign in</h2></div>
     <div class="card-body">
       <div class="row">
         <div class="col-4">
