--- a/tickets/templates/tickets/_others_form.html
+++ b/tickets/templates/tickets/_others_form.html
@@ -3,14 +3,28 @@
     <div class="col-12 col-md-4 col-lg-3">
       <label>Email address</label>
     </div>
-    <div class="col-12 col-md-8 col-lg-4">
+    <div class="col-12 col-md-8 col-lg-4{% if form.email_addr.errors %} is-invalid{% endif %}">
       {{ form.email_addr }}
+      {% if form.email_addr.errors %}
+        <div class="invalid-feedback">
+          {% for error in form.email_addr.errors %}
+            {{ error }}
+          {% endfor %}
+        </div>
+      {% endif %}
     </div>
     <div class="col-12 col-md-4 col-lg-1">
       <label>Name</label>
     </div>
-    <div class="col-12 col-md-8 col-lg-4">
+    <div class="col-12 col-md-8 col-lg-4{% if form.name.errors %} is-invalid{% endif %}">
       {{ form.name }}
+      {% if form.name.errors %}
+        <div class="invalid-feedback">
+          {% for error in form.name.errors %}
+            {{ error }}
+          {% endfor %}
+        </div>
+      {% endif %}
     </div>
   </div>
   <div class="row mt-3">
