--- a/cfp/templates/cfp/_proposal_form.html
+++ b/cfp/templates/cfp/_proposal_form.html
@@ -25,6 +25,8 @@
       <hr>
       {% bootstrap_field form.outline layout='horizontal' %}
       <hr>
+      {% bootstrap_field form.equipment layout='horizontal' %}
+      <hr>
       <p>Is your session particularly suitable for:</p>
       <div class="row">
         <div class="col offset-1">
