--- a/tickets/templates/tickets/new_educator_order.html
+++ b/tickets/templates/tickets/new_educator_order.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
   <div class="col-12 col-md-6">
-    <h2>Main Conference Tickets</h2>
+    <h2>Education Summit Tickets</h2>
   </div>
 </div>
 <div class="row">
@@ -12,7 +12,7 @@
     <p>Please <a href="{% url 'register' %}?next={{ request.path }}">sign up</a> or <a href="{% url 'login' %}?next={{ request.path }}">sign in</a> to buy a ticket.</p>
     {% endif %}
 
-    {% include './_ticket_info.html' %}
+    {% include './_educator_ticket_info.html' %}
   </div>
 
   <div class="col-12 col-md-6">
